<resources>
	<string name="app_name">UADAF</string>
	<string name="members_title">Members</string>
	<string name="dashboard_title">Dashboard</string>
	<string name="quoter_title">Quoter</string>
	<string name="ith_title">ITH</string>
	<string name="service_status_title">Services Status</string>
	<string name="preferences_title">Preferences</string>
	<string name="about_title">About</string>
	<string name="notification_center_title">Notification Center</string>

	<string name="app_subtitle">Unified Anti Divine Astral Front</string>
	<string name="no_notification_title">No Notifications yet</string>
	<string name="preference_failed_requests_notification_title">Получать уведомления о неудавшихся запросах</string>
	<string name="preference_failed_requests_notification_descr">При неудоавшемся запросе вам придет уведомление.
		Предназначено преимущественно для отладки
	</string>
	<string name="preference_exceptions_notification_descr">Получать уведомление об ошибках в приложении</string>
	<string name="preference_failed_requests_notification">preference_failed_requests_notification</string>
	<string name="preference_ith_username">preference_ith_username</string>
	<string name="preference_exceptions_notification">preference_exceptions_notification</string>

	<string name="empty"></string>

	<string name="menu_title">Menu</string>
	<string name="menu_close_title">Close menu</string>
	<string name="reload_title">Reload</string>
	<string name="unlike_title">Unlike story</string>
	<string name="like_title">Like story</string>
	<string name="ith_username_set_tip">Set ITH username in preferences</string>
	<string name="story_does_not_exists_label">Story with this id (%1$d) does not exists.</string>
	<string name="preference_exceptions_notification_title">Получать уведомления о каждой ошибке</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="liked_stories_title">Liked stories</string>
	<string name="all_stories_title">All stories</string>
	<string name="ith_toolbar_all">All</string>
	<string name="ith_toolbar_favs">Favs</string>
	<string name="ith_story_tags_label">Tags:</string>
	<string name="dashboard_icon_content_desc">Dashboard icon</string>
	<string name="ith_error_content_desc">Error</string>
	<string name="nc_no_notifications_content_desc">No notifications image</string>
	<string name="no_quotes_label">There\'s no quotes in this repository</string>
	<string name="no_internet_label">No internet connection</string>
	<string name="service_unavailable_label">Sorry. Service temporary unavailable. We already working on it.</string>
	<string name="repository_label">Repository</string>
	<string name="repository_meaning_label">What is this?</string>
	<string name="submit_label">Submit</string>

</resources>
